added ts and adjusted structure

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -12,6 +12,6 @@
       <button (click)="takeScreenshot()">Take Screenshot</button>
       <button (click)="useSpeech()">Use Speech</button>
     </div>
-    <script src="popup.js"></script>
+    <script src="popup.js" defer></script>
   </body>
 </html>
