feat: add button events

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,10 +8,10 @@
   <body>
     <div>
       <h1>Nano Form Filler</h1>
-      <button (click)="fillForm()">Fill Form with One Click</button>
-      <button (click)="takeScreenshot()">Take Screenshot</button>
-      <button (click)="useSpeech()">Use Speech</button>
+      <button id="autoFillFormButton">Auto Fill Form</button>
+      <button id="takeScreenshotButton">Take Screenshot</button>
+      <button id="useSpeechButton">Use Speech</button>
     </div>
-    <script src="popup.js" defer></script>
+    <script src="popup.bundle.js" defer></script>
   </body>
 </html>
