chore: add prettier

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nano Form Filler</title>
-  </head>
-  <body>
-    <div>
-      <h1>Nano Form Filler</h1>
-      <button id="autoFillFormButton">Auto Fill Form</button>
-      <button id="takeScreenshotButton">Take Screenshot</button>
-      <button id="useSpeechButton">Use Speech</button>
-    </div>
-    <script src="popup.bundle.js" defer></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Nano Form Filler</title>
+    </head>
+    <body>
+        <div>
+            <h1>Nano Form Filler</h1>
+            <button id="autoFillFormButton">Auto Fill Form</button>
+            <button id="takeScreenshotButton">Take Screenshot</button>
+            <button id="useSpeechButton">Use Speech</button>
+        </div>
+        <script src="popup.bundle.js" defer></script>
+    </body>
 </html>
