feat: add form loading and count

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <div>
+            <button id="loadFormsButton">Load Forms</button>
+            <div> Form count: <span id="formCount">0</span> </div>
             <h1>Nano Form Filler</h1>
             <button id="autoFillFormButton">Auto Fill Form</button>
             <button id="takeScreenshotButton">Take Screenshot</button>
