--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,15 +4,23 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nano Form Filler</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div>
+        <div class="container">
+            <h2>Form Automation</h2>
+            <p>Choose an action to automate form filling</p>
             <button id="loadFormsButton">Load Forms</button>
             <div> Form count: <span id="formCount">0</span> </div>
-            <h1>Nano Form Filler</h1>
-            <button id="autoFillFormButton">Auto Fill Form</button>
-            <button id="takeScreenshotButton">Take Screenshot</button>
-            <button id="useSpeechButton">Use Speech</button>
+            <button id="autoFillFormButton" class="action-button">
+                <span class="icon">🔄</span> Fill Randomly
+            </button>
+            <button id="takeScreenshotButton" class="action-button">
+                <span class="icon">📸</span> Take Screenshot
+            </button>
+            <button id="useSpeechButton" class="action-button">
+                <span class="icon">🎤</span> Start Voice Input
+            </button>
         </div>
         <script src="popup.bundle.js" defer></script>
     </body>
