feat: add select for pre selected form

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,9 +11,13 @@
             <h2>Form Automation</h2>
             <p>Choose an action to automate form filling</p>
             <div class="formCount">
-                <div> Form count: <span id="formCount">0</span> </div>
+                <!-- <div> Form count: <span id="formCount">0</span> </div> -->
+                <div>
+                    <label for="selectedFormInput">Selected Form</label>
+                    <select id="selectedFormInput" name="selectedForm"></select>
+                </div>
                 <button id="loadFormsButton" class="action-button">
-                    <span class="icon">⌨️</span> Reload Forms
+                    <span class="icon">🔄</span> Reload Forms
                 </button>
             </div>
             <button id="autoFillFormButton" class="action-button">
