--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -23,17 +23,14 @@
             <button id="autoFillFormButton" class="action-button">
                 <span class="icon">⌨️</span> Fill Randomly
             </button>
-            <button id="takeScreenshotButton" class="action-button">
-                <span class="icon">📸</span> Take Screenshot
-            </button>
-            <div>
+            <div class="recording-controls">
                 <button id="startRecordingButton" class="action-button">
-                    <span class="icon">🎤</span> Start Recording
+                    <span class="icon">🎤</span> Start
                 </button>
                 <button id="stopRecordingButton" class="action-button">
-                    <span class="icon">🛑</span> Stop Recording
+                    <span class="icon">🛑</span> Stop
                 </button>
-                <select id="microphone" disabled>
+                <select id="microphone" class="microphone-select" disabled>
                     <option value="allow">Allow</option>
                     <option value="ask">Ask</option>
                     <option value="block">Block</option>
