refactor: smaller code splitting

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -36,9 +36,7 @@
                     <option value="block">Block</option>
                 </select>
             </div>
-            <div id="recordingStatus" class="status">
-                Not Recording
-            </div>
+            <div id="recordingStatus" class="status"> Not Recording </div>
         </div>
         <script src="popup.bundle.js" defer></script>
     </body>
